# Decent-HW-3-Shamir-Scheme

./: .gitignore  CMakeLists.txt  README.md
project/include/: shamir.h  utils.h
project/src/: main.cpp  shamir.cpp  utils.cpp
